syntax = "proto3";
package osmosis.gamm.v1beta1;

import "gogoproto/gogo.proto";
import "osmosis/gamm/v1beta1/genesis.proto";

option go_package = "github.com/osmosis-labs/osmosis/v14/x/gamm/types";

// ReplaceMigrationRecordsProposal is a gov Content type for updating the
// migration records. If a ReplaceMigrationRecordsProposal passes, the
// proposalâ€™s records override the existing MigrationRecords set in the module.
// Each record specifies a single connection between a single gamm pool and a
// single concentrated pool.
message ReplaceMigrationRecordsProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  repeated GammToConcentratedPoolLink records = 3
      [ (gogoproto.nullable) = false ];
}

// UpdateMigrationRecordsProposal is a gov Content type for updating the
// migration records. If a UpdateMigrationRecordsProposal passes, all the
// MigrationRecords in the proposals are edited. An existing
// GammToConcentratedPoolLink is not overriden unless explicitly included in the
// proposal. This differs from an ReplaceMigrationRecordsProposal because it
// only does an in place update of the MigrationRecords for records explicitly
// mentioned in the proposal.

// Lastly, if the clPoolId is set to 0, the GammToConcentratedPoolLink is
// deleted

// For example: if the existing DistrRecords were:
// [(Gamm 1, CL 5), (Gamm 2, CL 6), (Gamm 3, CL 7)]
// An UpdateMigrationRecordsProposal includes
// [(Gamm 2, CL 0), (Gamm 3, CL 4), (Gamm 4, CL 10)]
// This would delete Gamm 2, Edit Gamm 3, and Add Gamm 4
// The result MigrationRecords in state would be:
// [(Gamm 1, CL 5), (Gamm 3, CL 4), (Gamm 4, CL 10)]
message UpdateMigrationRecordsProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  repeated GammToConcentratedPoolLink records = 3
      [ (gogoproto.nullable) = false ];
}
